--- a/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
+++ b/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
@@ -1,5 +1,6 @@
 name: Trial option
 question: Do you provide a free trial option for your service?
+filter_label: free trial
 
 depends:
   - "on": lot
