--- a/frameworks/g-cloud-9/questions/services/standardsISO28000.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsISO28000.yml
@@ -1,5 +1,6 @@
 name: ISO 28000:2007 certification
 question: Do you have a current ISO 28000:2007 certification that covers the security of your supply chain?
+filter_label: ISO 28000:2007 (supply chain security)
 
 depends:
   - "on": lot
