--- a/frameworks/g-cloud-9/questions/services/standardsPCI.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsPCI.yml
@@ -1,5 +1,6 @@
 name: PCI certification
 question: Do you have a current Payment Card Industry Data Security Standard (PCI DSS) certification?
+filter_label: PCI DSS (payment card security)
 
 depends:
   - "on": lot
