--- a/frameworks/g-cloud-9/questions/services/browsersAccess.yml
+++ b/frameworks/g-cloud-9/questions/services/browsersAccess.yml
@@ -1,5 +1,6 @@
 name: Browser access
 question: Is your service accessed through a browser?
+filter_label: web browser interface
 
 depends:
   - "on": lot
