--- a/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
+++ b/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
@@ -10,12 +10,16 @@ type: radios
 options:
   - label: Public cloud
     value: public
+    filter_label: public cloud
   - label: Private cloud
     value: private
+    filter_label: private cloud
   - label: Community cloud
     value: community
+    filter_label: community cloud
   - label: Hybrid cloud
     value: hybrid
+    filter_label: hybrid cloud
 
 validations:
   - name: answer_required
