--- a/frameworks/g-cloud-9/questions/services/mobile.yml
+++ b/frameworks/g-cloud-9/questions/services/mobile.yml
@@ -1,5 +1,6 @@
 name: Working with mobile
 question: Has your service been designed to work on mobile devices?
+filter_label: mobile devices
 
 depends:
   - "on": lot
