--- a/frameworks/g-cloud-9/questions/services/standardsISOIEC27001.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsISOIEC27001.yml
@@ -1,5 +1,6 @@
 name: ISO/IEC 27001 certification
 question: Do you have a current ISO/IEC 27001 certification (2005 or 2013) that covers the security of your service?
+filter_label: ISO/IEC 27001 (service security)
 
 depends:
   - "on": lot
