Added Supplier type, Security clearance, and Pricing filters
Added Supplier type, Security clearance, and Pricing filters

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -5,6 +5,18 @@
     - serviceCategoriesSoftware
     - serviceCategoriesHosting
     - serviceCategoriesSupport
+- 
+  name: Supplier type
+  questions:
+    - resellingType
+-
+  name: Staff security clearance
+  questions:
+    - staffSecurityClearanceChecks
+-
+  name: Pricing options
+  questions:
+    - educationPricing
 -
   name: User support
   questions:
