Added filter label for G9 MVP
Added filter label for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/supportAvailableToThirdParty.yml
+++ b/frameworks/g-cloud-9/questions/services/supportAvailableToThirdParty.yml
@@ -1,5 +1,6 @@
 name: Support available to third parties
 question: Can third parties engaged by the buyer access the support features of your service?
+filter_label: Support available to third parties
 
 depends:
   - "on": lot
