Added filter label for G9 MVP
Added filter label for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/browsersAccess.yml
+++ b/frameworks/g-cloud-9/questions/services/browsersAccess.yml
@@ -1,5 +1,6 @@
 name: Browser access
 question: Is your service accessed through a browser?
+filter_label: Web browser interface
 
 depends:
   - "on": lot
