Added filter for G9 MVP
Added filter for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/mobile.yml
+++ b/frameworks/g-cloud-9/questions/services/mobile.yml
@@ -1,5 +1,6 @@
 name: Working with mobile
 question: Has your service been designed to work on mobile devices?
+filter_label: Designed for use on mobile devices
 
 depends:
   - "on": lot
