Added filter labels for G9 MVP
Added filter labels for G9 MVP.
Set 'other' to ignore.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/dataStorageAndProcessingLocations.yml
+++ b/frameworks/g-cloud-9/questions/services/dataStorageAndProcessingLocations.yml
@@ -12,12 +12,16 @@ type: checkboxes
 options:
   - label: United Kingdom
     value: uk
+    filter_label: United Kingdom
   - label: European Economic Area (EEA)
     value: eea
+    filter_label: European Economic Area (EEA)
   - label: EU-US Privacy Shield agreement locations
     value: privacy_shield
+    filter_label: EU-US Privacy Shield agreement locations
   - label: Other locations
     value: other
+    filter_ignore: true
 
 
 validations:
