Filter label correction - lower case
Filter label correction - amended filter labels to lower case so they work as part of the search results sentence.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/educationPricing.yml
+++ b/frameworks/g-cloud-9/questions/services/educationPricing.yml
@@ -1,6 +1,6 @@
 name: Education pricing
 question: Do you offer special pricing for educational organisations?
-filter_label: Discount for educational organisations
+filter_label: discount for educational organisations
 
 depends:
   - "on": lot
