Filter label correction - lower case
Filter label correction - amended filter labels to lower case so they work as part of the search results sentence.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
+++ b/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
@@ -10,16 +10,16 @@ type: radios
 options:
   - label: Public cloud
     value: public
-    filter_label: Public cloud
+    filter_label: public cloud
   - label: Private cloud
     value: private
-    filter_label: Private cloud
+    filter_label: private cloud
   - label: Community cloud
     value: community
-    filter_label: Community cloud
+    filter_label: community cloud
   - label: Hybrid cloud
     value: hybrid
-    filter_label: Hybrid cloud
+    filter_label: hybrid cloud
 
 validations:
   - name: answer_required
