Filter label correction - lower case
Filter label correction - amended filter labels to lower case so they work as part of the search results sentence.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/browsersAccess.yml
+++ b/frameworks/g-cloud-9/questions/services/browsersAccess.yml
@@ -1,6 +1,6 @@
 name: Browser access
 question: Is your service accessed through a browser?
-filter_label: Web browser interface
+filter_label: web browser interface
 
 depends:
   - "on": lot
