--- a/frameworks/g-cloud-9/questions/services/mobile.yml
+++ b/frameworks/g-cloud-9/questions/services/mobile.yml
@@ -1,6 +1,6 @@
 name: Working with mobile
 question: Has your service been designed to work on mobile devices?
-filter_label: Designed for use on mobile devices
+filter_label: designed for use on mobile devices
 
 depends:
   - "on": lot
