Filter label correction - lower case
Filter label correction - amended filter labels to lower case so they work as part of the search results sentence.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/metricsSoftwareHow.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsSoftwareHow.yml
@@ -16,10 +16,10 @@ options:
     filter_label: API access
   - label: Real-time dashboards
     value: real_time
-    filter_label: Real-time dashboards
+    filter_label: real-time dashboards
   - label: Regular reports
     value: regular_reports
-    filter_label: Regular reports
+    filter_label: regular reports
   - label: Reports on request
     value: on_request
-    filter_label: Reports on request
+    filter_label: reports on request
