--- a/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
@@ -18,7 +18,7 @@ type: checkboxes
 options:
   - label: Private network or public sector network
     value: private_or_psn
-    filter_label: Private network or public sector network
+    filter_label: private network or public sector network
   - label: TLS (Version 1.2 or above)
     value: tls
     filter_label: TLS (version 1.2 or above)
@@ -27,10 +27,10 @@ options:
     filter_label: IPsec or TLS VPN gateway
   - label: Bonded fibre optic connections
     value: bonded_fibre
-    filter_label: Bonded fibre optic connections
+    filter_label: bonded fibre optic connections
   - label: Legacy SSL and TLS (under 1.2)
     value: legacy_ssl
-    filter_label: Legacy SSL and TLS (under version 1.2)
+    filter_label: legacy SSL and TLS (under version 1.2)
   - label: Other
     value: other
     filter_ignore: true
