--- a/frameworks/g-cloud-9/questions/services/metricsHostingWhat.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsHostingWhat.yml
@@ -17,13 +17,17 @@ options:
     value: cpu
   - label: Disk
     value: disk
+    filter_label: disk
   - label: HTTP request and response status
     value: http
   - label: Memory
     value: memory
+    filter_label: memory
   - label: Network
     value: network
+    filter_label: network
   - label: Number of active instances
     value: num_instances
   - label: Other
     value: other
+    filter_ignore: true
