Added filter labels for G9 MVP
Added filter labels for G9 MVP.
Set 'support_request' response to ignore.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/scalingType.yml
+++ b/frameworks/g-cloud-9/questions/services/scalingType.yml
@@ -12,8 +12,10 @@ type: checkboxes
 options:
   - label: Scales automatically
     value: automatic
+    filter_label: automatic
   - label: Scales with user intervention
     value: user_intervention
+    filter_label: manual through user interface
 
 validations:
   - name: answer_required
