Added filter label for G9 MVP
Added filter label for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/usageNotifications.yml
+++ b/frameworks/g-cloud-9/questions/services/usageNotifications.yml
@@ -1,5 +1,6 @@
 name: Usage notifications
 question: Do you notify users if usage nears service limits?
+filter_label: notifies users if usage nears service limits
 
 depends:
   - "on": lot
