Filter label added for G9 MVP
Filter label added for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/backup.yml
+++ b/frameworks/g-cloud-9/questions/services/backup.yml
@@ -1,5 +1,6 @@
 name: Backup and recovery
 question: Does your service provide backup and recovery?
+filter_label: backup and recovery available
 
 depends:
   - "on": lot
