Added filter labels for G9 MVP
Added filter labels for G9 MVP.
Set 'other' to ignore.

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
+++ b/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
@@ -15,8 +15,10 @@ type: checkboxes
 options:
   - label: CSA CCM v3.0
     value: csa_ccm
+    filter_label: CSA CCM version 3.0
   - label: ISO/IEC 27001
     value: iso_iec_27001
+    filter_label: ISO/IEC 27001
   - label: Other
     value: other
     filter_ignore: true
