Updated content for buyer views
Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/APISandbox.yml
+++ b/frameworks/g-cloud-9/questions/services/APISandbox.yml
@@ -1,4 +1,4 @@
-name: API Sandbox
+name: API sandbox or test environment
 question: Is there a sandbox or test environment for your API?
 
 hidden: true
