--- a/frameworks/g-cloud-9/questions/services/APIUsage.yml
+++ b/frameworks/g-cloud-9/questions/services/APIUsage.yml
@@ -1,4 +1,4 @@
-name: Using the API
+name: What users can and can't do using the API
 question: Describe what users can and can’t do using your API.
 question_advice: >
     Include:
