--- a/frameworks/g-cloud-9/questions/services/accessRestrictionTesting.yml
+++ b/frameworks/g-cloud-9/questions/services/accessRestrictionTesting.yml
@@ -1,4 +1,4 @@
-name: Access restriction testing
+name: Access restriction testing frequency
 question: How often do you test your access controls?
 
 depends:
