--- a/frameworks/g-cloud-9/questions/services/auditSuppliersActions.yml
+++ b/frameworks/g-cloud-9/questions/services/auditSuppliersActions.yml
@@ -1,4 +1,4 @@
-name: Access to audit information about your organisation’s users’ actions
+name: Access to supplier activity audit information
 question: How do buyers access audit information about the actions your organisation has taken?
 
 depends:
