--- a/frameworks/g-cloud-9/questions/services/auditSuppliersActionsStorage.yml
+++ b/frameworks/g-cloud-9/questions/services/auditSuppliersActionsStorage.yml
@@ -1,4 +1,4 @@
-name: How long supplier audit data is stored
+name: How long supplier audit data is stored for
 question: How long do you store your organisation’s audit data for?
 
 hidden: true
