--- a/frameworks/g-cloud-9/questions/services/customisationDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/customisationDescription.yml
@@ -1,4 +1,4 @@
-name: Customisation
+name: Description of customisation
 question: How can users customise your service?
 question_advice: >
   Describe:
