--- a/frameworks/g-cloud-9/questions/services/dataExportFormatsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/dataExportFormatsOther.yml
@@ -1,4 +1,4 @@
-name: Data export formats
+name: Other data export formats
 question: What other formats can users export their data in?
 
 optional: true
