--- a/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
@@ -1,4 +1,4 @@
-name: Data protection between the buyer’s and supplier’s networks
+name: Data protection between buyer and supplier networks
 question: How do you protect data between the buyer’s network and your network?
 question_advice: >
   Read about the government’s <a
