--- a/frameworks/g-cloud-9/questions/services/dataProtectionWithinNetworkOther.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionWithinNetworkOther.yml
@@ -1,4 +1,4 @@
-name: Other protection within network
+name: Other protection within supplier network
 question: Describe how else you protect data within your network.
 
 hidden: true
