--- a/frameworks/g-cloud-9/questions/services/educationPricing.yml
+++ b/frameworks/g-cloud-9/questions/services/educationPricing.yml
@@ -1,4 +1,4 @@
-name: Education pricing
+name: Discount for educational organisations
 question: Do you offer special pricing for educational organisations?
 filter_label: discount for educational organisations
 
