--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
@@ -1,4 +1,4 @@
-name: Email or ticketing support
+name: Email or online ticketing support
 question: Do you provide email or online ticketing support?
 
 depends:
