--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportAccessibility.yml
@@ -1,4 +1,4 @@
-name: Ticketing support management accessibility
+name: Online ticketing support accessibility
 question: What accessibility standards does your online ticketing support management meet?
 
 hidden: true
