--- a/frameworks/g-cloud-9/questions/services/freeVersionDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/freeVersionDescription.yml
@@ -1,4 +1,4 @@
-name: Free version
+name: Description of free trial
 question: Describe the free version of your service.
 question_advice: >
   Include:
