--- a/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
+++ b/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
@@ -1,4 +1,4 @@
-name: Trial option
+name: Free trial available
 question: Do you provide a free trial option for your service?
 filter_label: free trial
 
