--- a/frameworks/g-cloud-9/questions/services/managementAccessAuthenticationDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/managementAccessAuthenticationDescription.yml
@@ -1,4 +1,4 @@
-name: Describe management authentication
+name: Description of management access authentication
 question: Describe how you authenticate management access to your service.
 
 hidden: true
