--- a/frameworks/g-cloud-9/questions/services/protectionOfDataAtRest.yml
+++ b/frameworks/g-cloud-9/questions/services/protectionOfDataAtRest.yml
@@ -1,4 +1,4 @@
-name: Data-at-rest protection
+name: Protecting data at rest
 question: How do you protect data at rest?
 question_advice: >
   Read about the government’s <a
