--- a/frameworks/g-cloud-9/questions/services/protectionOfDataAtRestOther.yml
+++ b/frameworks/g-cloud-9/questions/services/protectionOfDataAtRestOther.yml
@@ -1,4 +1,4 @@
-name: Other data-at-rest protection
+name: Other data at rest protection approach
 question: Describe how else you protect data at rest.
 
 hidden: true
