--- a/frameworks/g-cloud-9/questions/services/publicSectorNetworksTypes.yml
+++ b/frameworks/g-cloud-9/questions/services/publicSectorNetworksTypes.yml
@@ -1,4 +1,4 @@
-name: Public sector networks
+name: Connected networks
 question: What public sector networks is the service directly connected to?
 
 hidden: true
