--- a/frameworks/g-cloud-9/questions/services/resellingOrganisations.yml
+++ b/frameworks/g-cloud-9/questions/services/resellingOrganisations.yml
@@ -1,4 +1,4 @@
-name: Reselling organisation’s services
+name: Organisation whose services are being resold
 question: Which organisation’s services do you resell?
 
 hidden: true
