--- a/frameworks/g-cloud-9/questions/services/serviceAddOnDetails.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceAddOnDetails.yml
@@ -1,4 +1,4 @@
-name: Other services extension
+name: What software services is the service an extension to
 question: What other software services is your service an extension to?
 
 hidden: true
