--- a/frameworks/g-cloud-9/questions/services/serviceAddOnType.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceAddOnType.yml
@@ -1,4 +1,4 @@
-name: Service add-on type
+name: Software add-on or extension
 question: Is your service an add-on or extension to other software services?
 
 depends:
