--- a/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibility.yml
@@ -1,4 +1,4 @@
-name: Service accessibility
+name: Accessibility standards
 question: What accessibility standards does your service meet?
 
 depends:
