--- a/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibilityDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibilityDescription.yml
@@ -1,4 +1,4 @@
-name: Service accessibility description
+name: Description of accessibility
 question: Describe how your service is accessible.
 question_advice: >
   Include details of what users can and can’t do.
