--- a/frameworks/g-cloud-9/questions/services/training.yml
+++ b/frameworks/g-cloud-9/questions/services/training.yml
@@ -1,4 +1,4 @@
-name: Training
+name: Training service provided
 question: Do you provide training for cloud software and hosting services?
 
 depends:
