--- a/frameworks/g-cloud-9/questions/services/webInterfaceAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/webInterfaceAccessibility.yml
@@ -1,4 +1,4 @@
-name: How the web interface is accessible
+name: Web interface accessibility standard
 question: What accessibility standards does your web interface meet?
 
 hidden: true
