--- a/frameworks/g-cloud-9/questions/services/webInterfaceAccessibilityDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/webInterfaceAccessibilityDescription.yml
@@ -1,4 +1,4 @@
-name: Web interface accessibility description
+name: How the web interface is accessible
 question: Describe how your web interface is accessible.
 question_advice: >
   Include details of what users can and can’t do.
