--- a/frameworks/g-cloud-9/questions/services/webInterfaceAccessibilityTesting.yml
+++ b/frameworks/g-cloud-9/questions/services/webInterfaceAccessibilityTesting.yml
@@ -1,4 +1,4 @@
-name: Accessibility testing
+name: Web interface accessibility testing
 question: Describe any web interface testing you’ve done with assistive technology users.
 
 hidden: true
