--- a/frameworks/g-cloud-9/questions/services/auditBuyersActions.yml
+++ b/frameworks/g-cloud-9/questions/services/auditBuyersActions.yml
@@ -1,4 +1,4 @@
-name: Access to audit information about users’ actions
+name: Access to user activity audit information
 question: How do buyers access audit information about the actions their users have taken?
 question_advice: >
   Read about the government’s <a
