--- a/frameworks/g-cloud-9/questions/services/browsersAccess.yml
+++ b/frameworks/g-cloud-9/questions/services/browsersAccess.yml
@@ -1,4 +1,4 @@
-name: Browser access
+name: Web browser interface
 question: Is your service accessed through a browser?
 filter_label: web browser interface
 
