--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportPriority.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportPriority.yml
@@ -1,4 +1,4 @@
-name: Managing support tickets
+name: User can manage status and priority of support tickets
 question: Can users manage the status and priority of their support tickets?
 
 hidden: true
