--- a/frameworks/g-cloud-9/questions/services/metricsHostingWhat.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsHostingWhat.yml
@@ -1,5 +1,5 @@
 id: metricsWhat
-name: Infrastructure or application metrics
+name: Metrics types
 question: What infrastructure or application metrics do you provide?
 
 hidden: true
