--- a/frameworks/g-cloud-9/questions/services/mobile.yml
+++ b/frameworks/g-cloud-9/questions/services/mobile.yml
@@ -1,4 +1,4 @@
-name: Working with mobile
+name: Designed for use on mobile devices
 question: Has your service been designed to work on mobile devices?
 filter_label: mobile devices
 
