--- a/frameworks/g-cloud-9/questions/services/planningServiceCompatibility.yml
+++ b/frameworks/g-cloud-9/questions/services/planningServiceCompatibility.yml
@@ -1,4 +1,4 @@
-name: Planning for specific services
+name: Planning service works with specific services 
 question: Is your planning service for specific hosting or software services?
 
 hidden: true
