--- a/frameworks/g-cloud-9/questions/services/planningServiceCompatibilityList.yml
+++ b/frameworks/g-cloud-9/questions/services/planningServiceCompatibilityList.yml
@@ -1,4 +1,4 @@
-name: Services the planning service works with
+name: Hosting or software services the planning service works with
 question: Which hosting or software services is your planning service for?
 
 hidden: true
