--- a/frameworks/g-cloud-9/questions/services/publicSectorNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/publicSectorNetworks.yml
@@ -1,4 +1,4 @@
-name: Public sector networks
+name: Connection to public sector networks
 question: Does your service connect to any public sector networks?
 
 depends:
