--- a/frameworks/g-cloud-9/questions/services/publicSectorNetworksOther.yml
+++ b/frameworks/g-cloud-9/questions/services/publicSectorNetworksOther.yml
@@ -1,4 +1,4 @@
-name: Other networks
+name: Other public sector networks
 question: Which other public sector networks is your service connected to?
 
 hidden: true
