--- a/frameworks/g-cloud-9/questions/services/setupAndMigrationService.yml
+++ b/frameworks/g-cloud-9/questions/services/setupAndMigrationService.yml
@@ -1,4 +1,4 @@
-name: Setup or migration service
+name: Setup or migration service available
 question: Does your service help buyers migrate to the cloud or between cloud services?
 question_advice: Migration services should help organisations set up or move between cloud hosting or cloud software services.
 
