--- a/frameworks/g-cloud-9/questions/services/trainingServiceSpecific.yml
+++ b/frameworks/g-cloud-9/questions/services/trainingServiceSpecific.yml
@@ -1,4 +1,4 @@
-name: Training tied to specific services
+name: Training is tied to specific services
 question: Is your training for specific cloud hosting or software services?
 
 hidden: true
