--- a/frameworks/g-cloud-9/questions/services/userAuthenticationDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/userAuthenticationDescription.yml
@@ -1,4 +1,4 @@
-name: How users are authenticated
+name: Other user authentication
 question: Describe how you authenticate users when they access the service.
 
 hidden: true
