--- a/frameworks/g-cloud-9/questions/services/configurationAndChangeManagementType.yml
+++ b/frameworks/g-cloud-9/questions/services/configurationAndChangeManagementType.yml
@@ -1,4 +1,4 @@
-name: Configuration and change management type
+name: Configuration and change management standard
 question: Which configuration and change management processes does your organisation comply with?
 
 depends:
