Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/creditOrDebitCardInformation.yml
+++ b/frameworks/g-cloud-9/questions/services/creditOrDebitCardInformation.yml
@@ -1,4 +1,4 @@
-name: Credit or debit card information handled
+name: Credit or debit card handling
 question: Does your service handle credit or debit card information?
 
 depends:
