--- a/frameworks/g-cloud-9/questions/services/dataProtectionWithinNetwork.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionWithinNetwork.yml
@@ -1,4 +1,4 @@
-name: Data protection within the supplier’s network
+name: Data protection within supplier network
 question: How do you protect data within your network?
 
 depends:
