Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/metricsHosting.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsHosting.yml
@@ -1,5 +1,5 @@
 id: metrics
-name: Metrics available
+name: Infrastructure or application metrics
 question: Do you provide infrastructure or application metrics?
 
 depends:
