Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/mobileDifferences.yml
+++ b/frameworks/g-cloud-9/questions/services/mobileDifferences.yml
@@ -1,4 +1,4 @@
-name: Mobile and desktop differences
+name: Differences between the mobile and desktop service
 question: Describe any differences between the mobile and desktop service.
 
 optional: true
