--- a/frameworks/g-cloud-9/questions/services/ongoingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupport.yml
@@ -1,4 +1,4 @@
-name: Ongoing support services
+name: Ongoing support service
 question: Do you support cloud software or hosting services?
 question_advice: >
   Types of cloud support include:
