Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/ongoingSupportServicesList.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupportServicesList.yml
@@ -1,4 +1,4 @@
-name: Supported services
+name: List of supported services
 question: List the cloud hosting or software services you support
 
 hidden: true
