Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/protectionOfDataAtRest.yml
+++ b/frameworks/g-cloud-9/questions/services/protectionOfDataAtRest.yml
@@ -1,4 +1,4 @@
-name: Protection of data at rest
+name: Protecting data at rest
 question: How do you protect data at rest?
 question_advice: >
   Read about the different approaches to [protecting data at
