Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/securityStaffClearances.yml
+++ b/frameworks/g-cloud-9/questions/services/securityStaffClearances.yml
@@ -1,4 +1,4 @@
-name: Security clearances
+name: Government security clearance
 question: What level of security cleared staff are you able to provide staff to support the service?
 
 hidden: true
