--- a/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecific.yml
+++ b/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecific.yml
@@ -1,4 +1,4 @@
-name: Setup or migration tied to specific services
+name: Migration service is for specific cloud services
 question: Is your migration service for specific cloud services?
 
 hidden: true
