Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecific.yml
+++ b/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecific.yml
@@ -1,4 +1,4 @@
-name: Migration service is for specific cloud services
+name: Setup or migration service is for specific cloud services
 question: Is your migration service for specific cloud services?
 
 hidden: true
