Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
+++ b/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
@@ -1,4 +1,4 @@
-name: Staff security clearance checks
+name: Staff security clearance
 question: How do you manage staff security clearance checks?
 
 depends:
