Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/userAuthenticationDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/userAuthenticationDescription.yml
@@ -1,4 +1,4 @@
-name: Description of other user authentication
+name: Other user authentication
 question: Describe how you authenticate users when they access the service.
 
 hidden: true
