Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/webChatSupportAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/webChatSupportAccessibility.yml
@@ -1,4 +1,4 @@
-name: Web chat support accessibility
+name: Web chat support accessibliity standard
 question: What accessibility standards does your web chat meet?
 
 hidden: true
