--- a/frameworks/g-cloud-9/questions/services/webChatSupportAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/webChatSupportAccessibility.yml
@@ -1,4 +1,4 @@
-name: Web chat support accessibliity standard
+name: Web chat support accessibility standard
 question: What accessibility standards does your web chat meet?
 
 hidden: true
