Updated question name
Updated question name

Ticket: https://trello.com/c/mWvxIPFG/398-review-question-names

--- a/frameworks/g-cloud-9/questions/services/webChatSupportAccessibilityDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/webChatSupportAccessibilityDescription.yml
@@ -1,4 +1,4 @@
-name: Web chat support accessibility description
+name: Web chat support accessibility
 question: Describe how your web chat is accessible.
 question_advice: >
   Include details of what users can and can’t do.
