Add usage metrics question; combine user authentication questions.
 - these questions share an id (via an override in the question file), so
   need to be referred to by that id in the search_mapping (although
   not in the manifest).
 - also note that metricsHosting and metricsHostingHow were never shown
   for services in the cloud-software lot, despite the incorrect depends/
   on value.
 - also added note to readme about the search_mapping file.

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -28,6 +28,9 @@
     - installation
     - mobile
     - APISoftware
+- name: Service usage metrics
+  questions:
+    - metricsSoftwareHow
 -
   name: Infrastructure or application metrics
   questions:
